--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     </head>
   <body>
 <p>LuongHieuThuan-12A13</p>
-   <ol> 
-     <li>BaiF1</li>
+ 
+       <ol> BaiF1   </ol>
      <ul>
        <li> Hình 3</li>
        <li> Hinh 4</li>
@@ -15,8 +15,8 @@
        <li> Hinh 6</li>
        <li> Hinh 7 </li>
      </ul>
-   <li>BaiF2</li>
-    </ol>
+   <ol>BaiF2</ol>
+ 
      </body>
 
  </html>
