--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  
        <ol> BaiF1   </ol>
      <ul>
-       <li> Hình 3</li>
+       <li> <a heft="bài 1/baitapF1.html">Hinh 3</a></li>
        <li> Hinh 4</li>
        <li> Hinh5 </li>
        <li> Hinh 6</li>
