--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
        <ol> BaiF1   </ol>
      <ul>
        <li> <a heft="bài 1/baitapF1.html">Hinh 3</a></li>
-       <li> Hinh 4</li>
+       <li> <a baitapF1/Hinh4.html>Hinh 4</a></li>
        <li> Hinh5 </li>
        <li> Hinh 6</li>
        <li> Hinh 7 </li>
