--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
  
        <ol> BaiF1   </ol>
      <ul>
-       <li> <a heft="bài 1/baitapF1.html">Hinh 3</a></li>
-       <li> <a baitapF1/Hinh4.html>Hinh 4</a></li>
+       <li> <a href="">Hinh 3</a></li>
+       <li> <a href="baitapF1/Hinh4.html">Hinh 4</a></li>
        <li> Hinh5 </li>
        <li> Hinh 6</li>
        <li> Hinh 7 </li>
