--- a/baitapF4/hinh1.html
+++ b/baitapF4/hinh1.html
@@ -1,1 +1,11 @@
-baitapF4
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <img src="Images/Chan_dung.jpg" width="150" height="200" alt="Ảnh chân dung">
+</body>
+</html>
